src/objects/Time_Slot__c.object
<CustomObject>
    <fields>
        <fullName>Blocked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EC_Email__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Exhibitor Email</label>
        <referenceTo>EC_Email__c</referenceTo>
        <relationshipLabel>Time Slots</relationshipLabel>
        <relationshipName>Time_Slots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EC_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>EC_Order__c</referenceTo>
        <relationshipLabel>Time Slots</relationshipLabel>
        <relationshipName>Time_Slots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EC_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Schedule</label>
        <referenceTo>EC_Schedule__c</referenceTo>
        <relationshipLabel>Time Slots</relationshipLabel>
        <relationshipName>Time_Slots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Review</fullName>
                    <default>true</default>
                    <label>In Review</label>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Over Budget</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Time Slot</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EC_Schedule__c</columns>
        <columns>Start_Time__c</columns>
        <columns>Status__c</columns>
        <columns>EC_Order__c</columns>
        <columns>Delivery_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Completed_Times</fullName>
        <columns>NAME</columns>
        <columns>EC_Schedule__c</columns>
        <columns>Start_Time__c</columns>
        <columns>Status__c</columns>
        <columns>EC_Order__c</columns>
        <columns>Delivery_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Sent</value>
        </filters>
        <label>Completed Times</label>
    </listViews>
    <listViews>
        <fullName>Taken_Time_Slots</fullName>
        <columns>NAME</columns>
        <columns>Delivery_Date__c</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <columns>EC_Schedule__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Blocked__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Taken Time Slots</label>
    </listViews>
    <nameField>
        <displayFormat>TS-{0000}</displayFormat>
        <label>Time Slot Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Slots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>